# r3d

./: CMakeLists.txt
examples/: CMakeLists.txt  custom_shader.c  pbr_blend.c
include/r3d/: r3d.h  r3d_material.h  r3d_shader.h
shaders/scene/: geometry.frag
src/: r3d_draw.c  r3d_shader_custom.c
src/modules/: r3d_shader_custom.h
